# benchling_pubchem

./: .gitignore  Dockerfile  README.md  benchling_pubchem_starter.py  manifest.yaml  pyproject.toml
local_app/: app.py
local_app/benchling_app/: canvas_interaction.py  molecules.py  setup.py
local_app/benchling_app/views/: canvas_initialize.py  chemical_preview.py  completed.py  constants.py
local_app/lib/: logger.py  pub_chem.py
